<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.alejndro.mi_bd.Registros"
    android:orientation="vertical"
    android:weightSum="1">

    <TextView android:text="@string/Clave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <EditText
        android:id="@+id/txtclave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/Asunto"/>
    <EditText
        android:id="@+id/txtasunto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/DeScripcion"/>
    <EditText
        android:id="@+id/txtdescripcion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/Fecha"/>
    <EditText
        android:id="@+id/txtfecha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <Button
        android:layout_width="170dp"
        android:layout_height="50dp"
       android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:text="@string/Fecha"
        android:onClick="calendario"
        android:id="@+id/btnfecha"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/Lugar"/>
    <EditText
        android:id="@+id/txtlugar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="25dp"
    android:orientation="horizontal">

    <Button
        android:layout_width="170dp"
        android:layout_height="50dp"
        android:paddingLeft="10dp"
        android:text="@string/guardar"
        android:onClick="registrar"
        android:id="@+id/btnguardar"
        />
    <Button
        android:layout_width="170dp"
        android:layout_height="50dp"
        android:layout_gravity="right"
       android:layout_marginLeft="10dp"
        android:text="@string/buscar"
        android:onClick="buscar"
        android:id="@+id/btnbuscar"/>
</LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:layout_width="170dp"
            android:layout_height="50dp"
            android:paddingLeft="10dp"
            android:text="@string/eliminar"
            android:onClick="eliminar"
            android:id="@+id/btneliminar"
            />
        <Button
            android:layout_width="170dp"
            android:layout_height="50dp"
            android:layout_gravity="right"
            android:layout_marginLeft="10dp"
            android:text="@string/actualizar"
            android:onClick="actualizar"
            android:id="@+id/btnactualizar"/>
    </LinearLayout>

</LinearLayout>
