<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".Principal">

    <TextView android:text="@string/Titulo"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:textSize="20sp"/>

    <ImageButton
        android:layout_marginTop="15dp"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:id="@+id/imageView"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/logo"
        />

    <Button
        android:id="@+id/btnregistro"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:text="@string/Nuevo_pendiente"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:layout_marginTop="20dp" />

    <Button
        android:id="@+id/btnconsulta"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:text="@string/Consulta"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"/>

    <Button
        android:id="@+id/btnacerca"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:text="@string/Acerca_de"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"/>



</LinearLayout>
